--- a/resources/assets/sass/components/admin.scss
+++ b/resources/assets/sass/components/admin.scss
@@ -23,14 +23,14 @@
         h1{
             display: inline-block;
             margin: 1.5em 0 0 9em;
-            font-size: 4em;
+            font-size: 5em;
             text-align: center;
             color: black;
         }
     }
 
     .new{
-        font-size: 1.5em;
+        font-size: 2em;
         width: 4.2em;
         margin-left: 10em;
         display: inline-block;
@@ -46,91 +46,97 @@
         display: flex;
         border-bottom: $secondary-back-color solid thin;
         margin-top: 3em;
-        img{
-            width: 10em;
-            height: 10em;
-            margin: 1em 0 2em 7em;
-            border: 0.15em black solid;
-        }
-        .pInfo{
-            display: inline-block;
-            width: 35em;
-            margin-left: 7em;
-//            border: green thin solid;
-        }
-        
-        .status{
-//            border: blue thin solid;
-            height: 1.5em;
-            width: 9em;
-            margin: 0.65em 0 0 2.5em;
-            font-size: 1.5em;
-            
-            .active{
-                color: darkgreen;
-            } 
-            
-            .deactive{
-                color: red;
+        .portAd{
+            display: flex;
+            margin: auto;
+            img{
+                width: 10em;
+                height: 10em;
+                margin: 1em 0 2em 0;
+                border: 0.15em black solid;
             }
-        }
-        
-        .buttonsStat{
-//            border: orange solid thin;
-            margin: 3.9em 0 0 -14em;
-            height: 2em;
-            width: 16.3em;
-            
-            a{
+            .pInfo{
                 display: inline-block;
-                color: green;
-                margin-top: 0.3em;
-                font-size: 1.25em;
-                text-decoration: none;
-                background-color: #EEEEEE;
-                padding: 0.13em 0.78em 0.13em 0.38em;
-                border-top: 0.06em solid #CCCCCC;
-                border-right: 0.06em solid #333333;
-                border-bottom: 0.06em solid #333333;
-                border-left: 0.06em solid #CCCCCC;
+                width: 35em;
+                font-size: 2em;
+                margin-left: 8em;
+                margin-right: -8em;
+    //            border: green thin solid;
             }
-            
-            .deactiveBtn{
-                display: inline-block;
-                color: red;
-                margin-top: 0.3em;
-                font-size: 1.25em;
-                text-decoration: none;
-                background-color: #EEEEEE;
-                padding: 0.13em 0.78em 0.13em 0.38em;
-                border-top: 0.06em solid #CCCCCC;
-                border-right: 0.06em solid #333333;
-                border-bottom: 0.06em solid #333333;
-                border-left: 0.06em solid #CCCCCC;
+
+            .status{
+    //            border: blue thin solid;
+                height: 1.5em;
+                width: 9em;
+                margin: 0.65em 0 0 0em;
+                font-size: 1.5em;
+
+                .active{
+                    color: darkgreen;
+                } 
+
+                .deactive{
+                    color: red;
+                }
             }
-        }
+
+            .buttonsStat{
+    //            border: orange solid thin;
+                margin: 3.9em 0 0 -14em;
+                height: 2em;
+                width: 16.3em;
+
+                a{
+                    display: inline-block;
+                    color: green;
+                    margin-top: 0.3em;
+                    font-size: 1.25em;
+                    text-decoration: none;
+                    background-color: #EEEEEE;
+                    padding: 0.13em 0.78em 0.13em 0.38em;
+                    border-top: 0.06em solid #CCCCCC;
+                    border-right: 0.06em solid #333333;
+                    border-bottom: 0.06em solid #333333;
+                    border-left: 0.06em solid #CCCCCC;
+                }
+
+                .deactiveBtn{
+                    display: inline-block;
+                    color: red;
+                    margin-top: 0.3em;
+                    font-size: 1.25em;
+                    text-decoration: none;
+                    background-color: #EEEEEE;
+                    padding: 0.13em 0.78em 0.13em 0.38em;
+                    border-top: 0.06em solid #CCCCCC;
+                    border-right: 0.06em solid #333333;
+                    border-bottom: 0.06em solid #333333;
+                    border-left: 0.06em solid #CCCCCC;
+                }
+            }
         
-        .buttonsEdit{
-//            border: cyan solid thin;
-            width: 16.5em;
-            height: 2em;
-            margin: 6em 0 0 -15.3em;
-        
-            a{
-                display: block;
-                margin-top: 0.5em;
-                margin-left: -0.85em;
-                width: 9.8em;
-                font-size: 1.25em;
-                text-align: center;
-                text-decoration: none;
-                background-color: #EEEEEE;
-                color: #333333;
-                padding: 0.13em 0.55em 0.13em 0.38em;
-                border-top: 0.06em solid #CCCCCC;
-                border-right: 0.06em solid #333333;
-                border-bottom: 0.06em solid #333333;
-                border-left: 0.06em solid #CCCCCC;
+            .buttonsEdit{
+    //            border: cyan solid thin;
+                width: 16.5em;
+                height: 2em;
+                margin: 6em 0 0 -15.3em;
+
+                a{
+                    display: block;
+                    margin-top: 0.5em;
+                    margin-left: -0.85em;
+                    width: 9.8em;
+                    font-size: 1.25em;
+                    text-align: center;
+                    text-decoration: none;
+                    background-color: #EEEEEE;
+                    color: #333333;
+                    padding: 0.13em 0.55em 0.13em 0.38em;
+                    border-top: 0.06em solid #CCCCCC;
+                    border-right: 0.06em solid #333333;
+                    border-bottom: 0.06em solid #333333;
+                    border-left: 0.06em solid #CCCCCC;
+                }
             }
         }
     }
@@ -190,55 +196,59 @@
     .profile{
         margin: auto;
         font-size: 1.5em;
-        
-        h3{
-            display: block;
-            margin-left: 15em;
-            text-align: center;
-            width: 5em;
-//            border: blue thin solid;
-        }
-        
-        #EmailUs{
-            margin-left: 14.16em;
-        }
-        
-        h4{
-            display: block;
-            width: 15em;
-            height: 1.64em;
-            margin-top: -2.89em;
-            margin-left: 23.5em;
-            text-align: center;
-//            border: red solid thin;
-        }
-        
-        #EmailU{
-//            border: blue solid thin;
-            margin-left: 26.8em;
-        }
-        
-        a{
-            display: block;
-            margin: auto auto 1em auto;
-            width: 9.8em;
-            font-size: 1.25em;
-            text-align: center;
-            text-decoration: none;
-            background-color: #EEEEEE;
-            color: #333333;
-            padding: 0.13em 0.55em 0.13em 0.38em;
-            border-top: 0.06em solid #CCCCCC;
-            border-right: 0.06em solid #333333;
-            border-bottom: 0.06em solid #333333;
-            border-left: 0.06em solid #CCCCCC;
+        .pro{
+            margin: 0 14em 0 14em;
+            h3{
+                display: block;
+                margin-left: 15em;
+                text-align: center;
+                width: 5em;
+    //            border: blue thin solid;
+            }
+
+            #EmailUs{
+                margin-left: 14.16em;
+            }
+
+            h4{
+                display: block;
+                width: 15em;
+                height: 1.64em;
+                margin-top: -2.89em;
+                margin-left: 23.5em;
+                text-align: center;
+    //            border: red solid thin;
+            }
+
+            #EmailU{
+    //            border: blue solid thin;
+                margin-left: 26.8em;
+            }
+
+            a{
+                display: block;
+                margin: 2em auto 1em auto;
+                width: 9.8em;
+                font-size: 1.25em;
+                text-align: center;
+                text-decoration: none;
+                background-color: #EEEEEE;
+                color: #333333;
+                padding: 0.13em 0.55em 0.13em 0.38em;
+                border-top: 0.06em solid #CCCCCC;
+                border-right: 0.06em solid #333333;
+                border-bottom: 0.06em solid #333333;
+                border-left: 0.06em solid #CCCCCC;
+            }
         }
     }
 
-    .error {
+    .error{
         color: red;
         text-align: center;
+        margin-right: -1em;
         margin-left: 7em;
+        font-size: 1.3em;
     }
 
     .desp{
@@ -283,6 +293,11 @@
             margin: 3em 1em 0 0;
         }
     }
+}
+
+.form, .pure-form,.pure-form-aligned{
+    margin-right: -3em;
+    margin-left: -12em;
 }
 
 
