--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -12,35 +12,26 @@ body{
     background-color: $primary-back-color;
     font-family: Agency FB;
     font-weight: normal;
-//    width: 100%;
-//    border: thin blue solid;
-//    max-width: 100vw;
-//    overflow-x:hidden;
 }
 
 .container{
     width: 100%;
-//    border: cyan solid thin;
 }
 
 .img-slider {
     margin-left: 6.5em;
     width: 20.5em;
-//    border: thin darkblue solid;
 }
 
 section{
     padding-top: 5em;
     min-height: 60vh;
-//    margin-top: 20em;
 }
 
 .image-slider a img{   
     flex: 1 1 100%;
 	width: 18.5em;
 	height: 15em;
-//	position: relative;
-//    margin-top: 10em;
     margin: 0 1em 0 -0.7em;
 }
 
@@ -51,27 +42,23 @@ section{
         margin-left: 2em;
     }
 }
+
 .display{
     display: flex;
-//    border: orange thin solid;
-//    margin-left: 2em;
 }
+
 .imgContainer{
-//    border: green solid thin;
     margin: auto;
     width: 28em;
 }
 
 .paper,.logo,.packaging{
     flex: 1 0 auto;
-//    border: thin red solid;
     width: 18em;
     img{
         width: 8.5em;
         height: 8.5em;
         margin: 1em 2.5em 1em 2.5em;
-//        margin-left: 3.5em;
-//        margin-bottom: 3em;
         border: 0.15em black solid;
     }
 }
@@ -82,7 +69,6 @@ section{
 
 .desp{
     opacity: 1;
-//    border: thin black solid;
     height: auto;
     width: 26em;
     margin: auto;
@@ -125,26 +111,19 @@ section{
 }
 
 .form{
-//   border: thin red solid;
     #Form{
-//        border: thin green solid;
         width: 20.5em;
         margin: auto;
         
         label{
-//             border: thin green solid;
-             width: 4.8em;
-             // float: left;
-             // clear:both;
-              display: inline-block;
+            width: 4.8em;
+            display: inline-block;
         }
         
         input{
-//            border: thin orange solid;
             width: 15em;
             height: 2em;
-            margin-top: -2em;
-            margin-left: 6em;
+            margin-top: -2em 0 0 6em;
             display: inline-block;
         }
         
@@ -157,9 +136,8 @@ section{
         }
         
         #Message{
-            margin-top: -1.2em;
+            margin-top: -1.2em 0 0 6em;
             width: 15em;
-            margin-left: 6em;
         }
         
         #Send{
