--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -13,7 +13,7 @@
     
         a{
             margin: auto;
-            width: 75%;
+            width: 85%;
             .headImg{
                 width: 100%;
                 margin: auto;
@@ -21,6 +21,7 @@
         }
 
         .admin{
+            margin: 2em 0.5em 0 0;
             a{
                 color: black;
                 font-size: 1.5em;
@@ -209,19 +210,18 @@
 /*                             Second Breakpoint                                            */
 /*==========================================================================================*/
     @media only screen and (min-width: 55em) {
-        .container{
-        }
-        
        .heading{
+            margin: 0 0 1em 0;
+            width: 100%;
            height: 11em;
            a{
+            margin: auto;
+            width: 80%;
+            .headImg{
+                width: 100%;
                 margin: auto;
-                width: 75%;
-                .headImg{
-                    width: 100%;
-                    margin: auto;
-                }
             }
+        }
            
             .admin{
                 a{
