--- a/resources/assets/sass/components/head.scss
+++ b/resources/assets/sass/components/head.scss
@@ -10,10 +10,13 @@
     top: 0;
     left: 0;
     
-    h1{
+    a{
+        width: 70%;
         margin: auto;
-        flex: 1 1 100%;
-        align-content: center;
+        .headImg{
+            width: 100%;
+            margin: auto;            
+        }
     }
     
     p{
@@ -21,12 +24,10 @@
         margin: auto;
     }
     
-    img{
-        width: 80%;
-        margin: auto;            
-    }
-
+    
     .admin{
+        display: inline-block;
+        margin: 5em 3em 0 0;
         a{
             color: black;
             text-decoration: none;
