--- a/resources/assets/sass/components/admin.scss
+++ b/resources/assets/sass/components/admin.scss
@@ -84,10 +84,12 @@
     .paperAd{
         display: flex;
         border-bottom: $secondary-back-color solid thin;
-        margin-top: 3em;
         margin: auto;
+        margin-top: 3em;
+        width: 80%;
         .portAd{
             display: flex;
+            width: 100%;
             margin: auto;
             img{
                 width: 10em;
