--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -543,7 +543,7 @@ section {
 /* Dots */
 .slick-slider {
   height: 100%;
-  width: 320px; }
+  width: 100%; }
 
 .slick-dots {
   position: absolute;
@@ -1133,12 +1133,11 @@ section {
     height: 100%;
     margin: auto; }
   .slick-slide {
-    display: none;
+    display: block;
     float: left;
-    margin-left: -0.1em;
+    margin-left: -1.25px;
     width: 100%;
-    height: 100%;
-    min-height: 1px; }
+    height: 100%; }
   .slick-slider .slick-track,
   .slick-slider .slick-list {
     height: 100%;
@@ -1146,7 +1145,7 @@ section {
     margin-left: 2px; }
   .slick-prev,
   .slick-next {
-    margin: 0 -60px 0 -50px; }
+    margin: 0 -60px 0 -60px; }
   .slick-prev:before,
   .slick-next:before {
     font-size: 40px;
