--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -278,19 +278,18 @@
         }
 
         .image-slider{   
-            display: block;
+            display: block;            
             width: 100%;
             height: 100%;
             margin: auto;
         }
 
        .slick-slide{
-            display: none;
+           display: block;
             float: left;
-            margin-left: -0.1em;
+            margin-left: -1.25px;
             width: 100%;
             height: 100%;
-            min-height: 1px;
         }
 
         .slick-slider .slick-track,
@@ -303,7 +302,7 @@
 
         .slick-prev,
         .slick-next {
-            margin: 0 -60px 0 -50px;
+            margin: 0 -60px 0 -60px;
         }
 
         .slick-prev:before,
